welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: value Black is not a member of object java.awt.Color
  setCouleurBrosse(Color.Black)
                         ^